# wt_ballistics_calc

./: .gitignore  Cargo.toml  all.json  build.rs
src/: calc.rs  launch_parameters.rs  main.rs  rho.rs
src/lib/: atmosphere.rs  csv_export.rs  launch_parameters.rs  lib.rs  rho.rs  runner.rs
