[package]
name = "wt_ballistics_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wt_ballistics_calc_lib"
path = "src/lib/lib.rs"


[dependencies]
pad = "0.1.*"
wt_datamine_extractor = { git = "https://github.com/FlareFlo/wt_datamine_extractor" }
serde = { version = "1.*", features = ["derive"] }
toml = { version = "0.8.14", default-features = false, features = ["display"] }
zip = { version = "2.1.3", default-features = false, features = [] }
simple-si-units = {version = "1.1.1", features = ["serde"]}

[features]
inline = []
